@@ -2,6 +2,7 @@
 ======
 - Avoid "jsessionid" fragment being output in links when Google is indexing a site that
   creates anonymous sessions (checks for User-Agent containing "Googlebot").
+- Fixed XML Prolog breaking parsing when the synthetic root element is inserted.
 
 
 2.0.11
